<resources>
    <string name="app_name">Donation Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_donator_main">DonatorMainActivity</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_manager_main">ManagerMainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="date_donated">Date Donated:</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location:</string>
    <string name="detail_location">Location</string>
    <string name="short_description">Short Description:</string>
    <string name="dollar_value">Dollar Value:</string>
    <string name="long_description">Long Description:</string>
    <string name="comments">Comments:</string>
    <string name="item_category">Item Category:</string>
    <string name="item_number">Item Number:</string>
    <string name="short_description_detail">Short Description</string>
    <string name="picture">Picture:</string>
    <string name="long_description_detail">Long Description</string>
    <string name="dollar_value_detail">Dollar Value</string>
    <string name="item_category_category">Item Category</string>
    <string name="comments_detail">Comments</string>
    <string name="item_number_detail">Item Number</string>
    <string name="item_category_detail">Item Category</string>
    <string name="item_picture">item_picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_list2">ItemListActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="locations">Locations</string>
    <string name="map">Map</string>
    <string name="welcome">Welcome</string>
    <string name="enter_as_guest">Enter As Guest</string>
    <string name="email">Email:</string>
    <string name="loginpassword">Password:</string>
    <string name="item_name">Item Name:</string>
    <string name="add_item_name">Item Name</string>
    <string name="location">Location:</string>
    <string name="add_location">Location</string>
    <string name="short_description">Short Description:</string>
    <string name="long_description">Long Description:</string>
    <string name="dollar_value">Dollar Value:</string>
    <string name="item_category">Item Category:</string>
    <string name="add_comment">Add Comment:</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="donator">Donator</string>
    <string name="see_locations">See Locations</string>
    <string name="add_delete_edit_items">Add/Delete/Edit Items</string>
    <string name="itemname">ItemName</string>
    <string name="datecreated">dateCreated</string>
    <string name="long_description">Long Description:</string>
    <string name="dollar_value">Dollar Value:</string>
    <string name="short_description">Short Description:</string>
    <string name="location">Location:</string>
    <string name="item_category">Item Category:</string>
    <string name="comments">Comments:</string>
    <string name="edit_add_comment">Add Comment</string>
    <string name="make_changes">Make Changes</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="locations">Locations</string>
    <string name="categories">Categories</string>
    <string name="location">Location:</string>
    <string name="locationname">locationName</string>
    <string name="location_type">Location Type:</string>
    <string name="location_type">Location Type:</string>
    <string name="latitude">Latitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="address">Address:</string>
    <string name="website">Website:</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="string_back" />
    <string name="logout">Logout</string>
    <string name="manager">Manager</string>
    <string name="see_locations">See Locations</string>
    <string name="manage_items">Manage Items</string>
    <string name="register">Register</string>
    <string name="register_cancel">cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="volunteer">Volunteer</string>
    <string name="see_locations">See Locations</string>
    <string name="volunteer_add_location">Add location</string>
    <string name="add">Add</string>
    <string name="view_locations">View locations</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="item_list_name">name</string>
    <string name="item_list_date">date</string>
    <string name="cost">cost</string>
    <string name="category">category</string>
    <string name="category">category</string>
    <string name="locations">Locations</string>
    <string name="categories">Categories</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="navigation_menu">Navigation Menu</string>
</resources>
